feat: P4ADEV-2881 API uploadIngestionFlowFile refactoring (#59)
